--- a/Inter-Assignment/Inter-Assignment/Views/_ViewImports.cshtml
+++ b/Inter-Assignment/Inter-Assignment/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Inter_Assignment
 @using Inter_Assignment.Models
+@using Inter_Assignment.Models.EmployeeModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
