--- a/Inter-Assignment/Inter-Assignment/Views/_ViewImports.cshtml
+++ b/Inter-Assignment/Inter-Assignment/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Inter_Assignment
 @using Inter_Assignment.Models
 @using Inter_Assignment.Models.EmployeeModels
+@using Inter_Assignment.Models.TaskModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
