Added all CRUD operations for Employees and Tasks

--- a/Inter-Assignment/Inter-Assignment/Views/Employee/Employees.cshtml
+++ b/Inter-Assignment/Inter-Assignment/Views/Employee/Employees.cshtml
@@ -28,6 +28,8 @@
                     <input class="fs-6 btn btn-success mb-3 p-2" type="submit" value="Remove" />
             </form>
 
+            <a class="fs-6 btn btn-success mb-3 p-2" href="/Employee/EditEmployee?id=@employee.Id" aria-required="true">Edit</a>
+
         </div>
     }
 </div>
