--- a/Inter-Assignment/Inter-Assignment/Views/Task/Task.cshtml
+++ b/Inter-Assignment/Inter-Assignment/Views/Task/Task.cshtml
@@ -28,6 +28,8 @@
                     <input class="fs-6 btn btn-success mb-3 p-2" type="submit" value="Remove" />
             </form>
 
+            <a class="fs-6 btn btn-success mb-3 p-2" href="/Task/EditTAsk?id=@task.Id" aria-required="true">Edit</a>
+
         </div>
     }
 </div>
