--- a/Inter-Assignment/Inter-Assignment/Views/Task/EditTask.cshtml
+++ b/Inter-Assignment/Inter-Assignment/Views/Task/EditTask.cshtml
@@ -33,6 +33,16 @@
                 <span asp-validation-for="DueDate" class="text-danger"></span>
             </div>
             <div class="mb-3">
+                <label asp-for="@Model.EmployeId" class="form-label">Employees</label>
+                <select asp-for="@Model.EmployeId" class="form-control">
+                    @foreach (var type in Model.Employees)
+                    {
+                        <option value="@type.Id">@type.FullName</option>
+                    }
+                </select>
+                <span asp-validation-for="EmployeId" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
                 <input class="btn btn-primary" type="submit" value="EditTask" />
             </div>
         </form>
