Added new entity for Adding reviews

--- a/Inter-Assignment/Inter-Assignment/Views/_ViewImports.cshtml
+++ b/Inter-Assignment/Inter-Assignment/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using Inter_Assignment.Models
 @using Inter_Assignment.Models.EmployeeModels
 @using Inter_Assignment.Models.TaskModels
+@using Inter_Assignment.Data.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
