--- a/Inter-Assignment/Inter-Assignment/Views/Employee/Employees.cshtml
+++ b/Inter-Assignment/Inter-Assignment/Views/Employee/Employees.cshtml
@@ -25,12 +25,20 @@
             </div>
 
             <form class="input-group-sm" asp-controller="Employee" asp-action="RemoveEmployee" asp-route-employeeId="@employee.Id">
-                    <input class="fs-6 btn btn-success mb-3 p-2" type="submit" value="Remove" />
+                <input class="fs-6 btn btn-success mb-3 p-2" type="submit" value="Remove" />
             </form>
 
             <a class="fs-6 btn btn-success mb-3 p-2" href="/Employee/EditEmployee?id=@employee.Id" aria-required="true">Edit</a>
 
         </div>
     }
+
+    <form class="input-group-sm">
+        <a class="fs-6 btn btn-success mb-3 p-2 " asp-controller="Employee" asp-action="EmployeStatistic">Stat</a>
+    </form>
+
+
+
+
 </div>
 
