Made some views changes

--- a/Inter-Assignment/Inter-Assignment/Views/Employee/Employees.cshtml
+++ b/Inter-Assignment/Inter-Assignment/Views/Employee/Employees.cshtml
@@ -21,6 +21,10 @@
             <div class="card-body">
 
                 <h5 class="card-title mt-1">@employee.FullName</h5>
+                <h5 class="card-title mt-1">@employee.Emial</h5>
+                <h5 class="card-title mt-1">@employee.PhoneNumber</h5>
+                <h5 class="card-title mt-1">@employee.DateOfBirth</h5>
+                <h5 class="card-title mt-1">@employee.MonthlySalary</h5>
 
             </div>
 
