--- a/Inter-Assignment/Inter-Assignment/Views/Task/Task.cshtml
+++ b/Inter-Assignment/Inter-Assignment/Views/Task/Task.cshtml
@@ -21,6 +21,9 @@
             <div class="card-body">
 
                 <h5 class="card-title mt-1">@task.Title</h5>
+                <h5 class="card-title mt-1">@task.Description</h5>
+                <h5 class="card-title mt-1">@task.DueDate</h5>
+                <h5 class="card-title mt-1">@task.Employee.FullName</h5>
 
             </div>
 
