--- a/Inter-Assignment/Inter-Assignment/Views/Employee/EmployeStatistic.cshtml
+++ b/Inter-Assignment/Inter-Assignment/Views/Employee/EmployeStatistic.cshtml
@@ -9,9 +9,11 @@
 
 
 <div class="text-center row">
+
+    <h5 class="card-title mt-1">Top five employees with most finished tasks for last month</h5>
     @foreach (var employee in Model)
     {
-        <div class="card col-4" style="width: 20rem; ">
+        <div class="card col-4" style="width: 15rem; ">
 
             <div class="card-body">
 
