--- a/Inter-Assignment/Inter-Assignment/Views/Employee/Review.cshtml
+++ b/Inter-Assignment/Inter-Assignment/Views/Employee/Review.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
     @if (Model.EmployeeReviews.Count() == 0)
     {
-        <h3>There are curently no reviews for this product.</h3>
+        <h3>There are curently no reviews for this employee.</h3>
     }
     else
     {
