--- a/Inter-Assignment/Inter-Assignment/Views/Task/EditTask.cshtml
+++ b/Inter-Assignment/Inter-Assignment/Views/Task/EditTask.cshtml
@@ -45,8 +45,8 @@
 
             <label class="form-label">Is task completed</label>
             <select id='IsCompletedId' name='IsCompletedId'>
-                <option value='1'>True</option>
-                <option value='0'>False</option>
+                <option value='1'>Yes</option>
+                <option value='0'>No</option>
             </select>
 
             <div class="mb-3">
