--- a/Inter-Assignment/Inter-Assignment/Views/Task/AddTask.cshtml
+++ b/Inter-Assignment/Inter-Assignment/Views/Task/AddTask.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TaskViewModel
 
 @{
-    ViewBag.Title = "Add Employee";
+    ViewBag.Title = "Add Task";
 }
 
 
@@ -20,11 +20,6 @@
                 <label asp-for="@Model.Description" class="form-label">Description</label>
                 <input asp-for="@Model.Description" class="form-control" aria-required="true" placeholder="Describe the task"/>
                 <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="mb-3">
-                <label asp-for="@Model.DueDate" class="form-label">Due Date</label>
-                <input asp-for="@Model.DueDate" class="form-control" aria-required="true"  placeholder="dd/mm/year"/>
-                <span asp-validation-for="DueDate" class="text-danger"></span>
             </div>
             <div class="mb-3">
                 <label asp-for="@Model.DueDate" class="form-label">Due Date</label>
