--- a/Inter-Assignment/Inter-Assignment/Views/Employee/AddEmployee.cshtml
+++ b/Inter-Assignment/Inter-Assignment/Views/Employee/AddEmployee.cshtml
@@ -8,36 +8,42 @@
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
-<div class="row">
+<div class="text-center row">
+    @if (TempData.ContainsKey(WebConstants.GlobalExeptionError))
+    {
+        <div class="alert alert-success" role="alert">
+            @TempData[WebConstants.GlobalExeptionError]
+        </div>
+    }
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
         <form asp-action="AddEmployee" method="post">
             <div class="mb-3">
                 <label asp-for="@Model.FullName" class="form-label">Fullname </label>
-                <input asp-for="@Model.FullName" class="form-control" aria-required="true" placeholder="Ivan Antonov"/>
+                <input asp-for="@Model.FullName" class="form-control" aria-required="true" placeholder="Ivan Antonov" />
                 <span asp-validation-for="FullName" class="text-danger"></span>
             </div>
             <div class="mb-3">
                 <label asp-for="@Model.DateOfBirth" class="form-label">Date of birth </label>
-                <input asp-for="@Model.DateOfBirth" class="form-control" aria-required="true" placeholder="dd/mm/year"/>
+                <input asp-for="@Model.DateOfBirth" class="form-control" aria-required="true" placeholder="dd/mm/year" />
                 <span asp-validation-for="DateOfBirth" class="text-danger"></span>
             </div>
             <div class="mb-3">
                 <label asp-for="@Model.PhoneNumber" class="form-label">Phone Number</label>
-                <input asp-for="@Model.PhoneNumber" class="form-control" aria-required="true"  placeholder="Please enter phone number"/>
+                <input asp-for="@Model.PhoneNumber" class="form-control" aria-required="true" placeholder="Please enter phone number" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             <div class="mb-3">
                 <label asp-for="@Model.Emial" class="form-label">Emial</label>
-                <textarea asp-for="@Model.Emial" class="form-control" aria-required="true" placeholder="Please enter you E-mail" rows="5"></textarea>
+                <input asp-for="@Model.Emial" class="form-control" aria-required="true" placeholder="Please enter Emial" />
                 <span asp-validation-for="Emial" class="text-danger"></span>
             </div>
-             <div class="mb-3">
+            <div class="mb-3">
                 <label asp-for="@Model.MonthlySalary" class="form-label">Monthly Salary </label>
                 <input asp-for="@Model.MonthlySalary" class="form-control" aria-required="true" placeholder="Enter valid number"/>
                 <span asp-validation-for="MonthlySalary" class="text-danger"></span>
             </div>
 
-           
+
             <div class="mb-3">
                 <input class="btn btn-primary" type="submit" value="AddEmployee" />
             </div>
