--- a/Inter-Assignment/Inter-Assignment/Views/Employee/Review.cshtml
+++ b/Inter-Assignment/Inter-Assignment/Views/Employee/Review.cshtml
@@ -8,7 +8,13 @@
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
-<div class="row">
+<div class="text-center row">
+    @if (TempData.ContainsKey(WebConstants.GlobalExeptionError))
+    {
+        <div class="alert alert-success" role="alert">
+            @TempData[WebConstants.GlobalExeptionError]
+        </div>
+    }
     @if (Model.EmployeeReviews.Count() == 0)
     {
         <h3>There are curently no reviews for this employee.</h3>
