Created new migrations and made some changes to services

--- a/Inter-Assignment/Inter-Assignment/Views/Employee/AddReview.cshtml
+++ b/Inter-Assignment/Inter-Assignment/Views/Employee/AddReview.cshtml
@@ -19,7 +19,7 @@
         <form asp-action="AddReview" method="post">
             <div class="mb-3">
                     <label asp-for="@Model.Review" class="form-label">Add Review To Employe </label>
-                    <input asp-for="@Model.Review" class="form-control" aria-required="true" placeholder="China, Columbia, etc." />
+                    <input asp-for="@Model.Review" class="form-control" aria-required="true" placeholder="This Employe..." />
                     <span asp-validation-for="Review" class="text-danger"></span>
                 </div>
 
